--- a/Vagrantfile.provision.bash.erb
+++ b/Vagrantfile.provision.bash.erb
@@ -44,5 +44,15 @@ Vagrant.configure(2) do |config|
                 k8scluster.vm.provision :shell, path: "provisioning/bootstrap_spacewalk-client01.sh"
               end 
 
+             config.vm.define "cobbler-server" do |k8scluster|
+                k8scluster.vm.box = "bento/centos-7.8"
+                k8scluster.vm.hostname = "cobbler-server"
+                k8scluster.vm.network "private_network", ip: "192.168.50.22"                                
+                k8scluster.vm.provider "virtualbox" do |vb|
+                    vb.name = "vbox-cobbler-server"
+                    vb.memory = "4096"
+                end
+                k8scluster.vm.provision :shell, path: "provisioning/bootstrap_cobbler.sh"
+              end 
 
 end
