--- a/Vagrantfile.provision.bash.erb
+++ b/Vagrantfile.provision.bash.erb
@@ -55,4 +55,25 @@ Vagrant.configure(2) do |config|
                 k8scluster.vm.provision :shell, path: "provisioning/bootstrap_cobbler.sh"
               end 
 
+             config.vm.define "opennebula-frontend" do |k8scluster|
+                k8scluster.vm.box = "bento/ubuntu-20.04"
+                k8scluster.vm.hostname = "opennebula-frontend"
+                k8scluster.vm.network "private_network", ip: "192.168.50.23"                                
+                k8scluster.vm.provider "virtualbox" do |vb|
+                    vb.name = "vbox-opennebula-frontend"
+                    vb.memory = "4096"
+                end
+                k8scluster.vm.provision :shell, path: "provisioning/bootstrap_opennebula-frontend.sh"
+              end 
+
+             config.vm.define "opennebula-kvmnode" do |k8scluster|
+                k8scluster.vm.box = "bento/ubuntu-20.04"
+                k8scluster.vm.hostname = "opennebula-kvmnode"
+                k8scluster.vm.network "private_network", ip: "192.168.50.24"                                
+                k8scluster.vm.provider "virtualbox" do |vb|
+                    vb.name = "vbox-opennebula-kvmnode"
+                    vb.memory = "4096"
+                end
+                k8scluster.vm.provision :shell, path: "provisioning/bootstrap_opennebula-kvmnode.sh"
+              end 
 end
